--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <span class="weather-condition">Partly Cloudy</span>
     </div>
     <div class="city-info">
-        <span class="name">London</span>
-        <span class="country">United Kindgom</span>
+        <span class="name">Lagos</span>
+        <span class="country">Nigeria</span>
     </div>
     <ul class="extra-info">
         <li>
