--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A weather webapp built with HTML, CSS, JavaScript and WeatherAPI" />
-    <meta property="og:description" content="A weather webapp built with HTML, CSS, JavaScript and WeatherAPI" />
+    <meta property="og:description" content="Weather WebApp built with HTML, CSS, JavaScript and WeatherAPI" />
     <meta property="og:title" content="WeatherApp" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://truepadawan.github.io/Weather-App/" />
