--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./resources/favicon.ico" />
     <meta name="description" content="A weather webapp built with HTML, CSS, JavaScript and WeatherAPI" />
     <meta property="og:description" content="Weather WebApp built with HTML, CSS, JavaScript and WeatherAPI" />
     <meta property="og:title" content="WeatherApp" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://truepadawan.github.io/Weather-App/" />
-    <meta property="og:image" content="%PUBLIC_URL%/resources/poster.PNG" />
+    <meta property="og:image" content="./resources/poster.PNG" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mobile-style.css">
     <script src="scripts.js" defer></script>
